--- a/DataTable/MainWidgets.ui
+++ b/DataTable/MainWidgets.ui
@@ -99,6 +99,13 @@
      <height>26</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menu">
+    <property name="title">
+     <string>新建</string>
+    </property>
+    <addaction name="newCode"/>
+   </widget>
+   <addaction name="menu"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -108,6 +115,11 @@
     <bool>false</bool>
    </attribute>
   </widget>
+  <action name="newCode">
+   <property name="text">
+    <string>code</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
